<resources>
    <string name="app_name">MTKPatcherSDK</string>
    <string name="smile">&#x1F60D;</string>
    <string name="slightly_smile">&#x1F600;</string>
    <string name="neutral">&#x1F610;</string>
    <string name="slightly_frowning">&#x1F61E;</string>
    <string name="frwoning">&#x1F623;</string>
    <string name="patcher_tap_to_see_image">Tap to see image</string>
    <string name="patcher_tap_to_watch_video">Tap to watch video</string>
    <string name="patcher_msg_enter_user_code">Enter user code from %1$s app.</string>
    <string name="patcher_msg_methinks_user_code">Enter methinks user code.</string>
    <string name="patcher_error_msg_can_not_connect_server">Can\'t connect to methinks server. Please try again or contact methinks.</string>
    <string name="patcher_error_msg_invalid_user_code">Invalid user code. Enter your user code again.</string>
    <string name="patcher_error_msg_test_period_over">Testing period is over. Thank you for your participation. Please delete this app from your device.</string>
    <string name="patcher_msg_permission_setting_menu">Please allow the required permissions in the Setting menu.</string>
    <string name="patcher_msg_camera_photo_permission">Camera will be used to calculate distance from your head and measure the brightness of the environment and/or take still picture periodically. Please allow Camera permission.</string>
    <string name="patcher_msg_choose_why_screenshot">Please choose why you took a screenshot.</string>
    <string name="patcher_msg_illegal_screenshot">You are not allowed to take screenshots of this app. Please delete the screenshot immediately, or you may be subject to legal actions.</string>
    <string name="patcher_msg_allow_permission_screen_recording">Please allow permissions required for screen recordings.</string>
    <string name="patcher_msg_more_detail">More details please!</string>
    <string name="patcher_voice_answer">Voice answer</string>
    <string name="patcher_text_answer">Text answer</string>
    <string name="patcher_start_recording">Start Recording</string>
    <string name="patcher_finish_recording">Finish Recording</string>
    <string name="patcher_send_answer">Sending Answers...</string>
    <string name="patcher_settings">Settings</string>
    <string name="patcher_done">Done</string>
    <string name="patcher_next">Next</string>
    <string name="patcher_bug_report">Bug report</string>
    <string name="patcher_suggestion">Suggestion</string>
    <string name="patcher_forum">Forum</string>
    <string name="patcher_project_requirement">Project requirement</string>
    <string name="patcher_other">Other</string>
    <string name="patcher_mobile_test_platform">Mobile Test Platform</string>
    <string name="patcher_user_code">User Code</string>
    <string name="patcher_msg_enter_unique_user_code">Please enter your unique User Code under project detail in methinks app.</string>
    <string name="patcher_msg_enter_unique_user_code_custom_client">Please enter your unique User Code you received from email or SMS text. </string>
    <string name="patcher_android_welcome_hi">Hi, %1s</string>
    <string name="patcher_news">News</string>
    <string name="patcher_survey">Survey</string>
    <string name="patcher_no_news">No News</string>
    <string name="patcher_no_survey">No Survey</string>
    <string name="patcher_allow_permissions">Allow Permissions</string>
    <string name="patcher_start_testing">Start Testing</string>
    <string name="patcher_android_welcome">Welcome,\n%1s</string>
    <string name="patcher_ios_msg_following_permissions">Following permissions are required to proceed this test.</string>
    <string name="patcher_ios_permission_camera">Camera</string>
    <string name="patcher_ios_permission_microphone">Microphone</string>
    <string name="patcher_ios_permission_speech_recognition">Speech Recognition</string>
    <string name="patcher_new_version_found">New version found!</string>
    <string name="patcher_msg_download_new_version">Please download the new version to continue the playtest.\nDO NOT delete the current version, or you will lose all your progress!</string>
    <string name="patcher_your_progress">Your progress:</string>
    <string name="patcher_text_download">Download</string>
    <string name="patcher_text_start">Start</string>
    <string name="patcher_text_close">Close</string>
    <string name="patcher_text_next">Next</string>
    <string name="patcher_text_strongly_agree">Strongly\nAgree</string>
    <string name="patcher_text_strongly_disagree">Strongly\nDisagree</string>
    <string name="patcher_msg_successfully_submitted">Successfully submitted!</string>
    <string name="patcher_msg_something_wrong">❗️Something is wrong, please try again.</string>
    <string name="patcher_msg_suggestion_desc">Your suggestions help make a better app! Please be descriptive.</string>
    <string name="patcher_msg_bug_report_desc">Please describe in detail what the bug or problem is about.</string>
    <string name="patcher_msg_project_requirement_desc">Submitting the screenshot. Do you have any comment to add?</string>
    <string name="patcher_msg_duplicated_connection_other_device">❗️This app will be closed because it was opened in another device.</string>
    <string name="patcher_msg_use_wifi_network">❗️Please connect your device to your Wi-Fi network to continue.</string>
    <string name="patcher_msg_need_thinker_app">️Please download methinks app from App Store.</string>
    <string name="patcher_msg_need_whitelabel_app">️Please download nexonfirst app from App Store.</string>
    <string name="patcher_cancel">Cancel</string>
    <string name="patcher_msg_apptest_is_running">App test is running now.</string>
    <string name="patcher_text_apptest">App test</string>
    <string name="patcher_msg_methinks_apptest_is_running">methinks app test is running now...</string>
    <string name="patcher_confirm">Confirm</string>
    <string name="patcher_req_show_touch">You should enable show touches option for the app test</string>
    <string name="patcher_show_touch_setup">Please select way of turn on the show touches.</string>
    <string name="patcher_show_touch_setup_option_first"> - If you want to turn on show touches on your own, select setup.</string>
    <string name="patcher_show_touch_setup_option_second"> - If you want to enable show touches automatically with our extension file, select download.</string>
    <string name="patcher_show_touch_option_first">setup</string>
    <string name="patcher_show_touch_option_second">download</string>
    <string name="patcher_set_devmode">You should enable developer mode first.</string>
    <string name="patcher_set_devmode_guide">Enable guide</string>
    <string name="patcher_download_extension_dialog_title">Extension file download</string>
    <string name="patcher_download_extension_dialog_desc">To enable touch pointer, methinks extension file is required. do you agree to download?</string>
    <string name="patcher_install_extension_instruction">Please install extension app and start this.</string>
    <string name="patcher_install_extension_by_user_title">install extension app</string>
    <string name="patcher_install_extension_by_user_desc">Please install methinks_touchsupports.apk what you downloaded and restart apptest.</string>
    <string name="patcher_block_emulator_title">Emulator is not permitted</string>
    <string name="patcher_block_emulator_desc">Researcher blocked using emulator with this app.</string>
    <string name="patcher_user_already_logined">You are already joined this session with another device. </string>
    <string name="patcher_build_number_cont">Go to the installation page to update to the new version</string>
    <string name="patcher_hover_header">Additional Function</string>
    <string name="alert_title">Hey, just a quick question before you leave!</string>
    <string name="survey_close">Thank you for the response!</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=io.methinks.android</string>
    <string name="parse_app_id">myAppId</string>
    <string name="parse_client_key">myClientKey</string>
    <string name="parse_server_url">http://methinks-dev.us-east-1.elasticbeanstalk.com/parse/</string>
    <string name="parse_app_id_release">YD9CKosHpxy6rzjKoOuupsVSawNnd91pbnce3pq3</string>
    <string name="parse_client_key_release">Fneut4OcLRiMzkHHXTOU07nm7XVkWDgIdxH3HtJI</string>
    <string name="parse_server_url_release">https://www.methinks.io/parse</string>
    <string name="parse_app_id_staging">YD9CKosHpxy6rzjKoOuupsVSawNnd91pbnce3pq3</string>
    <string name="parse_client_key_staging">Fneut4OcLRiMzkHHXTOU07nm7XVkWDgIdxH3HtJI</string>
    <string name="parse_server_url_staging">https://staging.methinks.io/parse</string>
    <string name="parse_sdk_version">1.16.7</string>
    <string name="question_object_id_skip_target_app_list_debug">1ZQeHMyCHb</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="time_placeholder">00:00 AM</string>
    <string name="date_placeholder">MM/DD/YYYY</string>
    <string name="font_weight_regular">regular</string>
    <string name="font_weight_medium">medium</string>
    <string name="font_weight_bold">bold</string>
    <string name="common_text_gig">Gig</string>
    <string name="common_msg_walk_through_gig">methinks provides our thinkers (you!) with gigs that match your passions and interests.</string>
    <string name="common_text_test">Test</string>
    <string name="common_msg_walk_through_test">Businesses want thinkers to try their products and to help make them better - apply to test apps, play games, and get paid.</string>
    <string name="common_text_chat">Chat</string>
    <string name="common_msg_walk_through_chat">Businesses want to meet you and hear what you have to say about their products - apply to participate in live video chats inside the methinks app. </string>
    <string name="common_text_survey">Survey</string>
    <string name="common_msg_walk_through_survey">Use a few minutes of downtime to take on an express gig, including surveys.</string>
    <string name="common_text_earn">Earn</string>
    <string name="common_msg_walk_through_earn">Get paid! Your earnings will be sent directly to your PayPal account on a weekly basis (or receive an Amazon gift card).</string>
    <string name="common_msg_use_your_invitation_code">Use your invitation code</string>
    <string name="common_text_invitation_code">Invitation Code</string>
    <string name="common_msg_allow_location">Allow Location</string>
    <string name="common_msg_location_description">Providing your location information allows businesses to more easily discover you, which will increase the chance of getting paid gigs. Your exact location (such as street address) will never be shared to anyone.</string>
    <string name="common_text_turn_on_notifications">Turn on Notifications?</string>
    <string name="common_msg_push_setting_request">Communications with businesses, and important updates about interviews will be delivered via Push Notification. Enable this feature so you can quickly make a response, which in return will help you secure paid gigs. We will never use Push Notification for marketing purposes.</string>
    <string name="common_text_enter_your_code">Enter your Code</string>
    <string name="common_text_log_in">Log in</string>
    <string name="common_text_forgot_your_password">Forgot your password?</string>
    <string name="common_text_sign_up">Sign up</string>
    <string name="common_text_submit">Submit</string>
    <string name="common_text_prev">Prev</string>
    <string name="common_text_skip_uppercap">Skip</string>
    <string name="action_button_text_apply">Apply</string>
    <string name="doSurvey">Yes!</string>
    <string name="skip">Nope!</string>
</resources>