<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    app:layout_behavior = "com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/white"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/twilight"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/action_button_text_apply"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id = "@+id/body"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:background = "@color/white"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="16dp">

        <TextView
            android:id = "@+id/bodyText"
            android:layout_width = "match_parent"
            android:layout_weight = "1"
            android:layout_height = "wrap_content"
            android:text = "@string/action_button_text_apply"
            android:textSize = "22sp"
            android:gravity = "center"
            android:layout_marginTop = "10dp"/>

        <LinearLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/bodyText"
            android:layout_marginTop = "10dp"
            >
            <Button
                android:id = "@+id/doSurveyAlert"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:layout_below = "@+id/bodyText"
                android:layout_marginTop = "8dp"
                android:layout_marginBottom = "8dp"
                android:layout_weight = "1"
                android:text = "@string/doSurvey"
                android:textSize = "20dp"/>

            <Button
                android:id="@+id/closeAnimAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bodyText"
                android:layout_marginTop = "8dp"
                android:layout_marginBottom = "8dp"
                android:layout_weight = "1"
                android:text = "@string/skip"
                android:textSize = "20dp"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>