<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/pale_grey_three"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnnouncementActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/announcement_toolbar"
        app:titleTextColor="@android:color/black"
        app:navigationIcon="@drawable/ic_close"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
            android:id="@+id/announcement_project_title"
            android:text="@string/patcher_android_welcome_hi"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            app:fw="@string/font_weight_bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
            android:id="@+id/announcement_project_progress"
            android:text="@string/patcher_your_progress"
            android:textSize="15dp"
            android:textColor="@android:color/black"
            app:fw="@string/font_weight_bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
            android:id="@+id/announcement_project_duration"
            android:textSize="11dp"
            android:textColor="@android:color/darker_gray"
            app:fw="@string/font_weight_bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/announcement_empty_space"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <LinearLayout
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/announcement_announce_container"
                android:background="@android:color/white"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="start"
                        android:src="@drawable/ic_announce"
                        android:adjustViewBounds="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_gravity="end"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
                            android:id="@+id/announcement_announce_count"
                            android:visibility="gone"
                            android:textColor="@color/white"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:gravity="center"
                            android:background="@color/cornflower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:src="@drawable/ic_menu_arrow_right"
                            android:adjustViewBounds="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </FrameLayout>
                <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
                    android:id="@+id/announcement_announce_title"
                    android:lines="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/patcher_no_news"
                    android:textSize="13dp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/announcement_survey_container"
                android:background="@android:color/white"
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="start"
                        android:src="@drawable/ic_survey"
                        android:adjustViewBounds="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_gravity="end"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
                            android:id="@+id/announcement_survey_count"
                            android:visibility="gone"
                            android:textColor="@color/white"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:gravity="center"
                            android:background="@color/cornflower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:src="@drawable/ic_menu_arrow_right"
                            android:adjustViewBounds="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </FrameLayout>
                <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
                    android:id="@+id/announcement_survey_title"
                    android:lines="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/patcher_no_survey"
                    android:textSize="13dp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>